# toy-rt

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: aabb.rs  camera.rs  main.rs  perlin.rs  prelude.rs  ray.rs  vec3.rs
src/hit/: box.rs  bvh_node.rs  combine.rs  constant_medium.rs  flip_normals.rs  hitlist.rs  mod.rs  moving_sphere.rs  rect.rs  rotate.rs  sphere.rs  translate.rs
src/material/: dielectric.rs  diffuse.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/texture/: checker.rs  constant.rs  image.rs  mod.rs  noise.rs
trt-core/: Cargo.toml
trt-core/src/: camera.rs  color.rs  dimension.rs  lib.rs  perlin.rs  prelude.rs  ray.rs  scene.rs  utils.rs  vec3.rs
trt-core/src/hit/: box.rs  bvh_node.rs  combine.rs  constant_medium.rs  cylinder.rs  flip_normals.rs  hitlist.rs  mod.rs  moving_sphere.rs  rect.rs  rotate.rs  sphere.rs  translate.rs
trt-core/src/material/: builder.rs  dielectric.rs  diffuse.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
trt-core/src/texture/: checker.rs  image.rs  mod.rs  noise.rs
trt-core/src/vec3/: array.rs  mod.rs  simd.rs
trt-dsl/: Cargo.toml
trt-dsl/scenes/: cornell_box.py  demo.py  dynamic.py  foam_cubes.py  gophery_nightmare.py  simple_3_spheres.py  sphere_cluster.py
trt-dsl/src/: future.rs  lib.rs  prelude.rs
trt-dsl/src/api/trt/: __init__.py  material.py  shape.py
trt-dsl/src/bindings/: camera.rs  float.rs  hitbox.rs  material.rs  mod.rs  rect.rs  scene.rs  shape.rs  sphere.rs  vec3.rs
trt-render/: Cargo.toml
trt-render/src/: main.rs
trt-wasm/: Cargo.toml
trt-wasm/src/: lib.rs
web/: pack-scenes.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/public/: demo.py  index.html  style.css
web/src/: bootstrap.ts  global.d.ts  index.ts  index.tsx  wasm-executor.ts  worker.ts
web/src/assets/: scenes.ts
web/src/components/: canvas.tsx  control-panel.tsx  editor.tsx  github-corner.tsx  progress-loader.tsx
