[package]
name = "toy-ray-tracer"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.3"
rand = "0.7"
rayon = "1.2"
indicatif = { version = "0.12", features = ["with_rayon"] }
image = "0.22"
