[package]
name = "trt-dsl"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
trt-core = { path = "../trt-core" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", features = ["freeze-stdlib"] }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
thiserror = "1.0"
reqwest = { path = "/home/globi/dev/reqwest" }
futures = "0.3"

[dependencies.image]
version = "0.23"
default_features = false
features = ["gif", "jpeg", "png", "webp", "bmp"]
