[package]
name = "trt-dsl"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
trt-core = { path = "../trt-core" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", features = ["freeze-stdlib"], rev = "9a8f47b14e5fcd3c1a15f30213e5f98751258912" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython", rev = "9a8f47b14e5fcd3c1a15f30213e5f98751258912" }
thiserror = "1.0"
reqwest = { git = "https://github.com/Globidev/reqwest.git", branch = "wasm-webworkers" }
futures = "0.3"

[dependencies.image]
version = "0.23"
default_features = false
features = ["gif", "jpeg", "png", "webp", "bmp"]
