[package]
name = "trt-render"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
indicatif = { version = "0.14", features = ["with_rayon"] }
image = "0.23"
rand = { version = "0.7", features = ["small_rng"] }
trt-core = { path = "../trt-core" }
