[package]
name = "trt-wasm"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
trt-core = { path = "../trt-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1" }
rand = { version = "0.7", features = ["wasm-bindgen"] }
